@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,118
-#define STRPRODUCTVER  "0,4,0,118"
-#define STRPRODUCTDATE "2011-12-16"
+#define PRODUCTVER     0,4,0,121
+#define STRPRODUCTVER  "0,4,0,121"
+#define STRPRODUCTDATE "2012-01-12"
 #endif // VERSION_HPP
